fix up some warnings